test(frontend): implement comprehensive Vitest test suite with 90 tests
- Add Vitest + React Testing Library infrastructure
- Create 90 tests across 4 test files in frontend/tests/
- Test priority calculation, component rendering, accessibility
- Fix BentoCard semantic HTML (div instead of header/footer)
- Simplify CLAUDE.md to focus on guidelines and references
- Clean up README.md to focus on user needs
- All tests passing with WCAG 2.1 AA compliance